deployment-frontend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend-container
        image: pixelcodegg/f-final:1.0
        imagePullPolicy: Always
        ports:
        - containerPort: 80
