deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
      - name: frontend-container
        image: pixelcodegg/f-final:1.0
        imagePullPolicy: Always
        ports:
        - containerPort: 80
      - name: backend-containter
        image: pixelcodegg/b-final:1.0
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
