service-backend.yml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: so1-final
spec:
  selector:
    app: backend
  ports:
    - port: 80
      targetPort: 3000
  type: LoadBalancer
