service.yml
apiVersion: v1
kind: Service
metadata:
  name: client-service
spec:
  selector:
    app: client
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
